[package]
name = "ogni"
version = "0.1.0"
edition = "2024"
description = "A human-friendly cron job manager"
license = "MIT"
repository = "https://github.com/rvben/ogni"
homepage = "https://github.com/rvben/ogni"
keywords = ["cron", "crontab", "schedule", "cli", "sysadmin"]
categories = ["command-line-utilities"]
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]

[[bin]]
name = "ogni"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"

[profile.release]
strip = true
lto = true
